--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
         <h2>Artikel Terbaru</h2>
         
         <div class="blog-post">
-            <h3>Perkembangan Teknologi AI di 2024</h3>
-            <small>Diposting: 1 Januari 2024</small>
-            <p>Kecerdasan buatan semakin berkembang pesat dengan berbagai inovasi terbaru...</p>
+            <h3><a href="https://en.wikipedia.org/wiki/Hundred_Years%27_War" target="_blank">Hundred Years' War</a></h3>
+            <small>Source: Wikipedia</small>
+            <p>Perang Seratus Tahun adalah konflik panjang antara Inggris dan Prancis dari tahun 1337 hingga 1453...</p>
         </div>
 
         <div class="blog-post">
-            <h3>Dampak 5G terhadap Industri Digital</h3>
-            <small>Diposting: 25 Desember 2023</small>
-            <p>Jaringan 5G membawa revolusi baru dalam kecepatan dan konektivitas...</p>
+            <h3><a href="https://en.wikipedia.org/wiki/Edward_the_Black_Prince" target="_blank">Edward the Black Prince</a></h3>
+            <small>Source: Wikipedia</small>
+            <p>Edward, yang dikenal sebagai Black Prince, adalah putra tertua Raja Edward III dan pahlawan dalam Perang Seratus Tahun...</p>
         </div>
 
         <div class="blog-post">
-            <h3>Keamanan Siber di Era Digital</h3>
-            <small>Diposting: 20 Desember 2023</small>
-            <p>Pentingnya menjaga keamanan data pribadi di internet...</p>
+            <h3><a href="https://en.wikipedia.org/wiki/Joan_of_Arc" target="_blank">Joan of Arc</a></h3>
+            <small>Source: Wikipedia</small>
+            <p>Joan of Arc, pahlawan nasional Prancis, memimpin pasukan Prancis melawan Inggris selama Perang Seratus Tahun...</p>
         </div>
     </section>
 
