--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="home" class="hero">
         <div class="container">
             <h1>Selamat Datang di Website Sederhana</h1>
-            <p>Ini adalah contoh website statis dengan HTML murni</p>
+            <p>UPDATE : PENAMBAHAN EFEK KLIK DENGAN SCRIPT JS SEDERHANA</p>
         </div>
     </section>
 
