--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-container">
-            <div class="logo">WS</div>
+            <div class="logo">Pat</div>
             <div class="nav-links">
                 <a href="#home" class="active">Home</a>
                 <a href="#gallery">Gallery</a>
